--- a/frontend/src/containers/PersonalCalendar/EventSyncForms/PickEventSyncUserProfileCard.css
+++ b/frontend/src/containers/PersonalCalendar/EventSyncForms/PickEventSyncUserProfileCard.css
@@ -1,8 +1,8 @@
 .EsyncProfileCard{
   background-color: white;
-  margin-left: 125px;
-  margin-top: 100px;
-  width: 240px;
+  margin-left: 75px;
+  margin-top: 50px;
+  width: 325px;
   height: 376px;
   border-radius: 10px;
   display: grid;
@@ -12,6 +12,15 @@
   overflow: hidden;
 
 }
+
+
+.EsyncProfileCard img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 .image-box{
   width: 100%;
