--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -21,12 +21,15 @@
 .eventGroupChatContainer{
   /* background-color: red; */
   width: 40%;
+  overflow: hidden;
+
 }
 
 .eventGroupChatContainer .messageList{
-  width: 100%;
+  width: 102%;
   height: 90%;
   background-color: white;
+  overflow: auto;
 }
 
 
@@ -36,7 +39,7 @@
   clear:both;
   display: inline-block;
   padding: 10px 15px;
-  margin: 15px 15px 5px 15px;
+  margin: 2px 15px 5px 15px;
   border-radius: 20px;
   max-width: 350px;
   /* line-height: 130%; */
@@ -61,7 +64,7 @@
   /* display: inline-block; */
   display:flex;
   padding: 10px 15px;
-  margin: 15px 15px 5px 15px;
+  margin: 2px 15px 5px 15px;
   border-radius: 20px;
   max-width: 350px;
   /* line-height: 130%; */
@@ -92,6 +95,9 @@
   /* margin-left: 5px; */
 }
 
+.eventChatInput {
+
+}
 
 .eventGroupChatContainer .inputForm{
 
