--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -47,7 +47,17 @@
   /* background-color: red; */
   width: 75%;
   height: 400px;
+  border: 10px dashed gainsboro;
+  text-align: center;
+
 }
+.eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic .pictureFrame{
+  position: relative;
+  top: 28%;
+  font-size: 55px;
+  color: gainsboro;
+}
+
 
 .eventInfoContainer .eventInfoView .eventInfo{
   /* background-color: #F5F5F5; */
