--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -128,6 +128,16 @@
 .eventInfoContainer .eventInfoView .eventInfo .contentEvent{
   margin-bottom: 30px;
 }
+.eventInfoContainer .eventInfoView .eventInfo .contentEventEmpty{
+  margin-bottom: 30px;
+  height: 100px;
+  text-align: center;
+  font-size: 20px;
+  /* border: 5px dashed gainsboro; */
+
+  /* background-color: red; */
+}
+
 .eventInfoContainer .eventInfoView .eventInfo .locationEventWord{
   font-size: 20px;
   color: black;
