--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -172,9 +172,34 @@
 
 .editEventButtonContainer{
   /* background-color: red; */
+
+  text-align: center;
   position:absolute;
-  top: 10px;
-  left: 100px;
+  font-size: 30px;
+  top: -70px;
+  left: 1150px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.editEventButtonContainer:hover{
+  /* background-color: red; */
+  /* right: 100px; */
+  top: 0px;
+}
+
+.editEventBackButtonContainer{
+  /* background-color: red; */
+  border: 1px solid gainsboro;
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 0px;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 3px;
+}
+.editEventBackButtonContainer:hover{
+  background-color: whitesmoke;
 }
 
 
