--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -59,7 +59,7 @@
 }
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventTopSide{
-  width: 25%;
+  width: 40%;
   height: 400px;
   padding: 25px;
   background-color: #F5F5F5;
@@ -100,12 +100,27 @@
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic{
   /* background-color: red; */
-  width: 75%;
+  width: 60%;
   height: 400px;
   border: 10px dashed gainsboro;
   text-align: center;
 
 }
+
+.eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic{
+  /* background-color: red; */
+  width: 60%;
+  height: 400px;
+  overflow: hidden;
+  /* border: 10px dashed gainsboro; */
+  text-align: center;
+
+}
+.eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic .eventBackgroundImg{
+  width: 100%;
+}
+
+
 .eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic .pictureFrame{
   position: relative;
   top: 28%;
