models for social event page set up

--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -348,7 +348,8 @@
 
 .coverEventCapacity .avatarContainer{
   /* background-color: blue; */
-  margin-left: 5px;
+  /* position: relative; */
+  /* margin-left: 5px; */
 }
 
 .joinEventButtonCover{
