--- a/frontend/src/containers/PersonalCalendar/EventSyncForms/DetailSwitch.css
+++ b/frontend/src/containers/PersonalCalendar/EventSyncForms/DetailSwitch.css
@@ -10,15 +10,47 @@
   transition: background 1s;
 }
 
+/* // if you want it to be wrapped
+/* around 2 rows, change height to 570 */
 .details-switch-demo {
   margin: 70px auto;
   width: 1100px;
-  height: 570px;
+  height: 870px;
   background: #fff;
 
   overflow: hidden;
   position: relative;
 }
+
+.eventSyncForm .friendListCon .friendList{
+  margin-top: 20px;
+  margin-bottom: 25px;
+  border: 1px solid #e8e8e8;
+  border-radius: 4px;
+  overflow: auto;
+  padding: 8px 24px;
+  height: 395px;
+  width:475px;
+
+
+}
+
+.eventSyncForm .friendListCon .friendList .friendItem {
+
+
+  background-color:#e6f7ff;
+}
+
+.eventSyncForm .friendListCon .friendList .friendItemHover{
+  /* background-color: red; */
+}
+
+.eventSyncForm .friendListCon .friendList .friendItemHover:hover {
+  background-color:#e6f7ff;
+}
+
+
+
 
 .details-switch-demo-img-wrapper,
 .details-switch-demo-text-wrapper {
