--- a/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
@@ -148,7 +148,75 @@
   height: 90%;
   background-color: white;
   overflow: auto;
+  /* background-color: red; */
 }
+
+.socialEventGroupChat .socialMessageList .eventMessageItemUser{
+  clear:both;
+  display: inline-block;
+  padding: 10px 15px;
+  margin: 2px 15px 5px 15px;
+  border-radius: 20px;
+  max-width: 350px;
+  /* line-height: 130%; */
+  /* background-color: red; */
+  background: #00BFFF;
+  color: #f5f5f5;
+  float: right;
+  font-size: 15px;
+}
+
+.socialEventGroupChat .socialMessageList .eventMessageItemUser .messageP{
+  margin-left: 10px;
+  /* background-color: red; */
+}
+
+.socialEventGroupChat .socialMessageList .eventMessageItemUser .messageP .eventTimeStamp{
+  display:inline-block;
+  float:right;
+  font-size: 9px;
+}
+
+.socialEventGroupChat .socialMessageList .eventMessageItemUser .eventMessageAvatar{
+  position: relative;
+  float:right;
+  /* background-color: red; */
+}
+
+
+.socialEventGroupChat .socialMessageList .eventMessageItemNotUser{
+  clear:both;
+  /* display: inline-block; */
+  display:flex;
+  padding: 10px 15px;
+  margin: 2px 15px 5px 15px;
+  border-radius: 20px;
+  max-width: 350px;
+  /* line-height: 130%; */
+  background: #f5f5f5;
+  /* background-color: red; */
+  float: left;
+  font-size: 15px;
+
+}
+.socialEventGroupChat .socialMessageList .eventMessageItemNotUser .messageP{
+  margin-left: 10px;
+
+}
+
+.socialEventGroupChat .socialMessageList .eventMessageItemNotUser .messageP .userName{
+  color: grey;
+  font-size: 13px;
+}
+
+
+.socialEventGroupChat .socialMessageList .eventMessageItemNotUser .messageP .eventTimeStamp{
+  font-size: 9px;
+
+}
+
+
+
 
 .socialEventChatInput{
 
