--- a/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
@@ -2,11 +2,13 @@
 .socialEventPageContainer{
   background-color: white;
   display: flex;
-  width: 1765px;
+  /* width: 1765px; */
+  width: 95%;
   /* padding: 30px; */
 
   /* To fix the issue with the whole page scrolling, just dont put height
   to 100% */
+  overflow: hidden;
   height: 93%;
 
   position: absolute;
@@ -15,32 +17,135 @@
   transform: translateX(-48%);
 }
 
+.socialEventPageContainer .showChatSwitch{
+  position: absolute;
+  left: 65.5%;
+  top: 96%;
+  z-index: 9999;
+  transition: 0.5s;
+  /* height: 100px; */
+  /* width: 100px; */
+}
+
+.socialEventPageContainer.active .showChatSwitch{
+  left: 75%;
+}
+
+.socialEventPageContainer .showChatWords{
+  position: absolute;
+  left: 64%;
+  top: 92%;
+  z-index: 9999;
+  transition: 0.5s;
+  font-size: 18px;
+}
+
+.socialEventPageContainer.active .showChatWords{
+  left: 73.5%;
+}
 
 /* This is for hte socialeventinfo side of the event page */
-.socialEventInfoContainer{
+
+
+.socialEventInfoContainerContainer{
   width: 70%;
   height: 100%;
-  overflow:auto;
+  /* overflow:auto; */
+  position: absolute;
+  left: 0%;
+  transition: 0.5s;
+
   /* background-color: red; */
 }
 
-.socialEventInfoContainer .eventInfoView{
+.socialEventInfoContainerContainer.active{
+  width: 60%;
+  overflow:hidden;
+  left: 19%;
+  /* background-color: red; */
+}
+
+.socialEventInfoContainerContainer .socialEventInfoContainer{
+  /* background-color: red; */
+  width: 100%;
+  position: absolute;
+  overflow:auto;
+  height: 100%;
+  /* left: 19%; */
+  transition: 0.5s;
+}
+.socialEventInfoContainerContainer.active .socialEventInfoContainer{
+  width: 1066px;
+}
+
+
+
+.socialEventInfoContainerContainer .socialEventInfoContainer .editEventBackButtonContainer{
+  border: 1px solid gainsboro;
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 0px;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 3px;
+}
+
+.socialEventInfoContainerContainer .socialEventInfoContainer .editEventBackButtonContainer:hover{
+  background-color: whitesmoke;
+}
+
+.socialEventInfoContainerContainer .socialEventInfoContainer .editEventButtonContainer{
+  text-align: center;
+  position:absolute;
+  font-size: 30px;
+  top: -140px;
+  left: 1120px;
+  width: 100px;
+  cursor: pointer;
+  /* background-color: red; */
+  transition: 0.5s;
+}
+
+.socialEventInfoContainerContainer .socialEventInfoContainer .editEventButtonContainer:hover{
+  top: 0px;
+}
+
+.socialEventInfoContainerContainer.active .socialEventInfoContainer .editEventButtonContainer{
+  /* top: -140px; */
+  left: 960px;
+}
+
+.socialEventInfoContainerContainer.active .socialEventInfoContainer .editEventButtonContainer:hover{
+  top: 0px;
+
+}
+
+
+
+
+
+/* Transfer more of that editing and event pge into the soical calendar events */
+
+
+
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView{
   height: 100%;
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier{
   display: flex;
 
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide{
   width: 35%;
   height: 400px;
   padding: 25px;
   background-color: #F5F5F5;
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventTitle{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventTitle{
   color: black;
   font-size: 30px;
   /* font-size: calc(1.2vw); */
@@ -50,16 +155,16 @@
   word-break: normal  ;
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventTime{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventTime{
   color: black;
   font-size: 20px;
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventHost{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventHost{
   margin-top: 20px;
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide .invitedNum{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventTopSide .invitedNum{
   margin-top: 90px;
   font-size: 18px;
 }
@@ -67,14 +172,14 @@
 
 
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic{
   width: 65%;
   height: 400px;
   border: 10px dashed gainsboro;
   text-align: center;
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic{
   width: 65%;
   height: 400px;
   overflow: hidden;
@@ -82,37 +187,43 @@
   text-align: center;
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic .eventBackgroundImg{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundWPic .eventBackgroundImg{
   width: 100%;
 }
 
-.socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic .pictureFrame{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic .pictureFrame{
   position: relative;
   top: 28%;
   font-size: 55px;
   color: gainsboro;
 }
 
-.socialEventInfoContainer .eventInfoView .eventInfo{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo{
   text-align: left;
   height: 100%;
   padding: 50px 220px;
+  transition: 0.5s;
 }
 
-.socialEventInfoContainer .eventInfoView .eventInfo .title{
+.socialEventInfoContainerContainer.active .socialEventInfoContainer .eventInfoView .eventInfo{
+  /* background-color: red; */
+  padding: 50px 100px;
+}
+
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo .title{
   font-size: 30px;
 }
 
-.socialEventInfoContainer .eventInfoView .eventInfo .aboutEvent{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo .aboutEvent{
   font-size: 30px;
   color: black;
   margin-bottom: 30px;
 }
 
-.socialEventInfoContainer .eventInfoView .eventInfo .contentEvent{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo .contentEvent{
   margin-bottom: 30px;
 }
-.socialEventInfoContainer .eventInfoView .eventInfo .contentEventEmpty{
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo .contentEventEmpty{
   margin-bottom: 30px;
   height: 100px;
   text-align: center;
@@ -121,14 +232,16 @@
 
   /* background-color: red; */
 }
-.socialEventInfoContainer .eventInfoView .eventInfo .locationEventWord{
+
+
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo .locationEventWord{
   font-size: 20px;
   color: black;
   margin-bottom: 10px;
 
 }
 
-.socialEventInfoContainer .eventInfoView .eventInfo .eventPeopleWord {
+.socialEventInfoContainerContainer .socialEventInfoContainer .eventInfoView .eventInfo .eventPeopleWord {
   font-size: 20px;
   color: black;
   margin-top: 40px;
@@ -140,12 +253,24 @@
 /* This is for the socialevent group chat size fo the event page */
 .socialEventGroupChat{
   width: 30%;
+  position: absolute;
+  left: 70%;
+  /* left: 0; */
+  height: 100%;
   /* background-color: blue; */
+  transition: 0.5s;
+}
+
+.socialEventGroupChat.active{
+  /* background-color: red; */
+  position: absolute;
+  left: 100%;
+
 }
 
 .socialEventGroupChat .socialMessageList{
-  width: 102%;
-  height: 90%;
+  width: 105%;
+  height: 96%;
   background-color: white;
   overflow: auto;
   /* background-color: red; */
