modal setup for deleting social cal events

--- a/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
@@ -68,7 +68,7 @@
   left: 0%;
   transition: 0.5s;
 
-  /* background-color: red; */
+  background-color: white;
 }
 
 .socialEventInfoContainerContainer.active{
