--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -59,7 +59,7 @@
 }
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventTopSide{
-  width: 43%;
+  width: 35%;
   height: 400px;
   padding: 25px;
   background-color: #F5F5F5;
@@ -74,7 +74,7 @@
   height: 70px;
   word-break: normal  ;
 }
-.eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .eventTime{
+.eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .attendees{
   color: black;
   font-size: 20px;
   /* margin-top: 10px; */
@@ -93,7 +93,7 @@
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .invitedNum{
   /* color: black; */
-  margin-top: 90px;
+  margin-top: 20px;
   font-size: 18px;
 }
 
