--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -9,7 +9,9 @@
 
   border-radius: 10px;
   padding:25px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.10);
+  box-shadow:
+
+  0 10px 50px rgba(0, 0, 0, 0.12);
   font-family: 'Segoe UI Regular';
   /* background-color: gainsboro; */
 }
@@ -23,7 +25,17 @@
 }
 
 .eventDetails{
+  padding:20px;
   font-size: 16px;
+  position: relative;
+}
+
+.innerContainerPeople{
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .flex-child {
