--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -25,8 +25,15 @@
 }
 
 .outerContainer{
-  height:400px;
+  margin-bottom: 10px;
   /* background-color: red; */
+}
+
+
+.innerContainer{
+  position: relative;
+
+
 }
 
 .eventDetails{
@@ -35,11 +42,6 @@
   position: relative;
 }
 
-.innerContainerPeople{
-  position: relative;
-
-
-}
 
 .flex-child {
     flex: 1;
@@ -141,7 +143,7 @@
 .eventInfoContainer .eventInfoView .topSectContainier .eventTopSide .attendees{
   color: black;
   font-size: 16px;
-
+  line-height: 70%;
   /* margin-top: 10px; */
   /* background-color: red; */
 }
@@ -296,7 +298,7 @@
 
 
 .eventGroupChat{
-  margin-top: 100px;
+  margin-top: 75px;
   width: 30%;
   /* height: 100%; */
   /* background-color: red; */
