modifications on event page

--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -30,6 +30,11 @@
   /* background-color: gainsboro; */
 }
 
+.addFont{
+  font-family: 'Segoe UI Regular';
+  color:black;
+}
+
 .mapEventCard{
   position: relative;
   overflow: hidden;
@@ -59,6 +64,7 @@
 
 .outerContainer{
   margin-bottom: 10px;
+
   /* background-color: red; */
 }
 
