--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -1,3 +1,15 @@
+.socialCalCellModalBackground{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  overflow: hidden;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.45);
+  z-index: 99;
+
+}
+
 .socialCalCellModal {
   position: fixed;
   background: white;
