--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -13,6 +13,11 @@
   height: 1700px;
 
 }
+.profilePage.active{
+  /* height: 95vh; */
+  position: fixed;
+  overflow-y: hidden;
+}
 
 .profilePage .profileInfo{
   /* position: absolute; */
