--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -13,7 +13,7 @@
 .socialCalCellModal {
   position: fixed;
   background: white;
-  height: 1100px;
+  /* height: 100; */
   top: 10px;
   left: 10%;
   right: 10%;
