--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -12,11 +12,10 @@
 /* eyeball css */
 .pictureChange{
   position:absolute;
-  left: 43%;
-  top: 45%;
+  top: 50%;
   color: transparent;
   font-size: 40px;
-  z-index: 1;
+
   color:white;
   font-size: 48px;
 
@@ -72,10 +71,11 @@
   position: relative;
   overflow: hidden;
   width:400px;
-  height:300px;
+  height:375px;
   float:right;
 
   margin-right: 50px;
+  margin-bottom: 50px;
   background: white;
 
   border-radius: 15px;
@@ -344,19 +344,19 @@
   position:absolute;
   font-size: 30px;
   top: 25px;
-  left: 145px;
+  left: 125px;
   cursor: pointer;
   transition: 0.5s;
 }
 
 .editEventButtonContainer{
   /* background-color: red; */
-
+  color:#1890ff;
   text-align: center;
   position:absolute;
-  font-size: 40px;
-  top: 10px;
-  left: 1100px;
+  font-size: 30px;
+  top: 20px;
+  left: 1150px;
   cursor: pointer;
   transition: 0.5s;
 }
