set of new channels and pull information for new social cal cell page

--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -10,6 +10,13 @@
 
 }
 
+.exitX{
+  color: white;
+  font-size: 40px;
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+}
 
 /* This is for the page look */
 .socialCalCellModal {
