--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -22,17 +22,6 @@
 }
 
 
-/* gray part of cell if no pic */
- .hoverCell{  width: 115%;
-  height: 100%;
-  margin-left: -15px;
-
-}
-
-.hoverCell:hover{
-  background-color: #D3D3D3cc;
-
-}
 
 .hoverPic:hover{
   filter: brightness(90%);
@@ -402,7 +391,7 @@
 .eventGroupChatContainer{
   /* background-color: red; */
   width: 100%;
-  height: 100%;
+  height: 85%;
   overflow: hidden;
 
 }
@@ -486,9 +475,10 @@
 }
 
 .eventChatInput {
-
-}
-
-.eventGroupChatContainer .inputForm{
+  /* background-color: gainsboro; */
+  border-radius: 20px;
+  margin-left: 10px;
+  width:95%;
+  font-size: 16px;
 
 }
