--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -391,7 +391,7 @@
 .eventGroupChatContainer{
   /* background-color: red; */
   width: 100%;
-  height: 85%;
+  height: 80%;
   overflow: hidden;
 
 }
@@ -457,8 +457,8 @@
   /* position: absolute; */
   /* margin-top: -25px; */
   color: grey;
-  font-size: 13px;
-
+  font-size: 14px;
+  font-family: "Segoe UI";
 }
 .eventGroupChatContainer .messageList .eventMessageItemNotUser .messageP .eventTimeStamp{
   font-size: 9px;
