add profile pic in modal if it exists

--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -257,6 +257,14 @@
 
 }
 
+.changeProfilePic{
+  object-fit: cover;
+  width: 500px;
+  height: 350px;
+
+
+}
+
 
 
 .eventInfoContainer .eventInfoView .topSectContainier .eventBackgroundPic .pictureFrame{
